--- a/web.html
+++ b/web.html
@@ -8,6 +8,9 @@
             <h1>
                 Hola queridos estudiantes bla bla bla 
             </h1>
+            <h2>
+                Se les recuerda tomar aguita
+            </h2>
         </div>
     </body>
 </html>
